force-app/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <description>Objeto custom para recoger las ofertas</description>
    <label>Oferta</label>
    <nameField>
        <displayFormat>Off-{00000000}</displayFormat>
        <label>Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ofertas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>