force-app/main/default/objects/Offer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente con el que se relaciona la oferta</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ofertas</relationshipLabel>
    <relationshipName>Ofertas</relationshipName>
    <type>Lookup</type>
</CustomField>