force-app/main/default/objects/Offer__c/fields/LimitedDateOffer__c.field-meta.xml
<CustomField>
    <fullName>LimitedDateOffer__c</fullName>
    <description>Fecha límite que Simetría puede esperar una oferta de un proveedor.</description>
    <label>Fecha Limite Oferta</label>
    <type>Date</type>
</CustomField>