force-app/main/default/objects/Offer__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>relación con el proyecto original que dio cabida a la oferta</description>
    <label>Proyecto</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Ofertas</relationshipLabel>
    <relationshipName>Ofertas</relationshipName>
    <type>Lookup</type>
</CustomField>