force-app/main/default/objects/Offer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
                <default>true</default>
                <label>Nueva</label>
            </value>
            <value>
                <fullName>Enviada</fullName>
            </value>
            <value>
                <fullName>Recibida</fullName>
            </value>
            <value>
                <fullName>Cerrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>